refactor and correlation check update

--- a/ML.ipynb
+++ b/ML.ipynb
@@ -480,33 +480,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      1\n",
-       "1      1\n",
-       "2     -1\n",
-       "3     -1\n",
-       "4      1\n",
-       "      ..\n",
-       "499    1\n",
-       "500    1\n",
-       "501    1\n",
-       "502    1\n",
-       "503   -1\n",
-       "Name: 2 Day Direction, Length: 504, dtype: int64"
+       "-1    263\n",
+       " 1    236\n",
+       " 0      5\n",
+       "Name: 2 Day Direction, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y"
+    "y.value_counts()"
    ]
   },
   {
