--- a/News Processing.ipynb
+++ b/News Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,19 +14,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "news_dir = 'data/in/news/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Not on github since it's over a gig\n",
     "conn = sqlite3.connect(\"all-the-news.db\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cur = conn.cursor()"
@@ -34,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +68,7 @@
        "[('longform',)]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +355,7 @@
        "[204135 rows x 12 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +718,7 @@
        "Washington Post         12051    12051    12051  12051  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,21 +729,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "interesting_pubs = ['CNN', 'New York Times', 'Washington Post']"
+    "interesting_pubs = ['CNN', 'New York Times', 'Washington Post', 'Business Insider']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for pub in interesting_pubs:\n",
@@ -738,7 +750,7 @@
     "    df = df.rename(columns={'date':'Date'})\n",
     "    df['Date'] = pd.to_datetime(df['Date'],  errors='coerce')\n",
     "    df = df.sort_values(by='Date')\n",
-    "    df.to_csv(pub+'.csv', index=False)"
+    "    df.to_csv(news_dir+pub+'.csv', index=False)"
    ]
   },
   {
