--- a/Sentiment Maker.ipynb
+++ b/Sentiment Maker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "news_dir = 'data/in/news/'\n",
+    "twitter_dir = 'data/in/twitter/'\n",
+    "influencers = ['BarackObama','cnnbrk', 'KimKardashian']\n",
+    "sources = ['New York Times', 'CNN', 'Washington Post']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +50,7 @@
     "        score = analyser.polarity_scores(sentence)\n",
     "        return score['compound']\n",
     "    except:\n",
-    "        print('Failed to score:',sentence)\n",
+    "        print('Failed to score content:',sentence)\n",
     "        return 0\n",
     "    \n",
     "#     print(\"{:-<40} {}\".format(sentence, str(score)))"
@@ -44,7 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#TODO ADD CUSTOM HEURISTICS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -52,25 +77,15 @@
    "source": [
     "def sentimentTwiiter(influencers):\n",
     "    for influencer in influencers:\n",
-    "        df = pd.read_csv(influencer+'.csv', parse_dates=['Date'])\n",
+    "        df = pd.read_csv(twitter_dir+influencer+'.csv', parse_dates=['Date'])\n",
     "        df['sentiment_score'] = df['content'].apply(sentiment_analyzer_scores)\n",
-    "        df.to_csv(influencer+'.csv', index=False)"
+    "        df.to_csv(twitter_dir+influencer+'.csv', index=False)\n",
+    "    print('done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#AUTOMATION\n",
-    "influencers = ['BarackObama','cnnbrk', 'KimKardashian']\n",
-    "sentimentTwiiter(influencers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -78,26 +93,30 @@
    "source": [
     "def sentimentNews(sources):\n",
     "    for source in sources:\n",
-    "        df = pd.read_csv(source+'.csv', parse_dates=['Date'])\n",
+    "        df = pd.read_csv(news_dir+source+'.csv', parse_dates=['Date'])\n",
     "        df['sentiment_score'] = df['title'].apply(sentiment_analyzer_scores)\n",
-    "        df.to_csv(source+'.csv', index=False)"
+    "        df.to_csv(news_dir+source+'.csv', index=False)\n",
+    "    print('done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nan\n"
+      "done\n",
+      "Failed to score content: nan\n",
+      "done\n"
      ]
     }
    ],
    "source": [
-    "sources = ['New York Times', 'CNN', 'Washington Post']\n",
+    "#AUTOMATION\n",
+    "sentimentTwiiter(influencers)\n",
     "sentimentNews(sources)"
    ]
   },
@@ -294,7 +313,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv('New York Times.csv', parse_dates=['Date'])"
@@ -303,7 +324,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['Score'] = df['title'].apply(sentiment_analyzer_scores)"
