--- a/StockDataSaver.py.ipynb
+++ b/StockDataSaver.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "stock_dir = 'data/out/'\n",
+    "stocks = ['MSFT','AAPL','GOOG', 'VIX']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -78,12 +90,11 @@
    "source": [
     "#AUTORUN\n",
     "\n",
-    "stocks = ['MSFT','AAPL','GOOG', 'VIX']\n",
     "for cur_stock in stocks:\n",
     "    print('getting',cur_stock)\n",
     "    url = make_request(cur_stock)\n",
     "    data = get_data(url)\n",
-    "    data.to_csv(cur_stock+'.csv', index=False)\n",
+    "    data.to_csv(stock_dir+cur_stock+'.csv', index=False)\n",
     "    print('wrote',cur_stock)"
    ]
   },
@@ -10196,7 +10207,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "time_price = [[key,response_dict[matching_period][key]['1. open']] for key in response_dict[matching_period]]"
