--- a/Output Gen.ipynb
+++ b/Output Gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -13,18 +13,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "data_VIX = pd.read_csv('VIX.csv', parse_dates=['Date'])\n"
+    "stock_dir = 'data/out/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_VIX = pd.read_csv(stock_dir+'VIX.csv', parse_dates=['Date'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -41,20 +50,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "data_VIX['Lag 2 Price'] = data_VIX['Price'].shift(-2)\n",
-    "data_VIX['2 Day Change'] = (data_VIX['Lag 2 Price'] - data_VIX['Price'])/data_VIX['Price']\n",
-    "data_VIX['2 Day Direction'] = data_VIX['2 Day Change'].apply(posOrNeg)"
+    "def bigPosOrNeg(val):\n",
+    "    if val>0.01:\n",
+    "        return 1\n",
+    "    elif val<-0.01:\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_VIX['Lag 2 Price'] = data_VIX['Price'].shift(-2)\n",
+    "data_VIX['2 Day Change'] = (data_VIX['Lag 2 Price'] - data_VIX['Price'])/data_VIX['Price']\n",
+    "data_VIX['2 Day Direction'] = data_VIX['2 Day Change'].apply(posOrNeg)\n",
+    "data_VIX['2 Day Significant'] = data_VIX['2 Day Change'].apply(bigPosOrNeg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1    2331\n",
+       " 1    2136\n",
+       " 0     547\n",
+       "Name: 2 Day Significant, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_VIX['2 Day Significant'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -84,6 +132,7 @@
        "      <th>Lag 2 Price</th>\n",
        "      <th>2 Day Change</th>\n",
        "      <th>2 Day Direction</th>\n",
+       "      <th>2 Day Significant</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -95,6 +144,7 @@
        "      <td>27.98</td>\n",
        "      <td>0.148604</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -104,6 +154,7 @@
        "      <td>26.68</td>\n",
        "      <td>0.069767</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -112,6 +163,7 @@
        "      <td>0.121893</td>\n",
        "      <td>25.14</td>\n",
        "      <td>-0.101501</td>\n",
+       "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -122,6 +174,7 @@
        "      <td>21.89</td>\n",
        "      <td>-0.179535</td>\n",
        "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -131,84 +184,104 @@
        "      <td>21.98</td>\n",
        "      <td>-0.125696</td>\n",
        "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5005</td>\n",
-       "      <td>2019-11-22</td>\n",
-       "      <td>12.82</td>\n",
-       "      <td>-0.039700</td>\n",
-       "      <td>11.88</td>\n",
-       "      <td>-0.073323</td>\n",
        "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5006</td>\n",
-       "      <td>2019-11-25</td>\n",
-       "      <td>12.51</td>\n",
-       "      <td>-0.024181</td>\n",
-       "      <td>11.55</td>\n",
-       "      <td>-0.076739</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5007</td>\n",
-       "      <td>2019-11-26</td>\n",
-       "      <td>11.88</td>\n",
-       "      <td>-0.050360</td>\n",
-       "      <td>12.50</td>\n",
-       "      <td>0.052189</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5008</td>\n",
-       "      <td>2019-11-27</td>\n",
-       "      <td>11.55</td>\n",
-       "      <td>-0.027778</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5009</td>\n",
        "      <td>2019-11-29</td>\n",
        "      <td>12.50</td>\n",
        "      <td>0.082251</td>\n",
+       "      <td>14.68</td>\n",
+       "      <td>0.174400</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5010</td>\n",
+       "      <td>2019-12-02</td>\n",
+       "      <td>12.69</td>\n",
+       "      <td>0.015200</td>\n",
+       "      <td>16.38</td>\n",
+       "      <td>0.290780</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5011</td>\n",
+       "      <td>2019-12-03</td>\n",
+       "      <td>14.68</td>\n",
+       "      <td>0.156816</td>\n",
+       "      <td>14.46</td>\n",
+       "      <td>-0.014986</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5012</td>\n",
+       "      <td>2019-12-04</td>\n",
+       "      <td>16.38</td>\n",
+       "      <td>0.115804</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5013</td>\n",
+       "      <td>2019-12-05</td>\n",
+       "      <td>14.46</td>\n",
+       "      <td>-0.117216</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5010 rows × 6 columns</p>\n",
+       "<p>5014 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date  Price    Change  Lag 2 Price  2 Day Change  2 Day Direction\n",
-       "0    2000-01-03  24.36       NaN        27.98      0.148604                1\n",
-       "1    2000-01-04  24.94  0.023810        26.68      0.069767                1\n",
-       "2    2000-01-05  27.98  0.121893        25.14     -0.101501               -1\n",
-       "3    2000-01-06  26.68 -0.046462        21.89     -0.179535               -1\n",
-       "4    2000-01-07  25.14 -0.057721        21.98     -0.125696               -1\n",
-       "...         ...    ...       ...          ...           ...              ...\n",
-       "5005 2019-11-22  12.82 -0.039700        11.88     -0.073323               -1\n",
-       "5006 2019-11-25  12.51 -0.024181        11.55     -0.076739               -1\n",
-       "5007 2019-11-26  11.88 -0.050360        12.50      0.052189                1\n",
-       "5008 2019-11-27  11.55 -0.027778          NaN           NaN                0\n",
-       "5009 2019-11-29  12.50  0.082251          NaN           NaN                0\n",
+       "           Date  Price    Change  Lag 2 Price  2 Day Change  2 Day Direction  \\\n",
+       "0    2000-01-03  24.36       NaN        27.98      0.148604                1   \n",
+       "1    2000-01-04  24.94  0.023810        26.68      0.069767                1   \n",
+       "2    2000-01-05  27.98  0.121893        25.14     -0.101501               -1   \n",
+       "3    2000-01-06  26.68 -0.046462        21.89     -0.179535               -1   \n",
+       "4    2000-01-07  25.14 -0.057721        21.98     -0.125696               -1   \n",
+       "...         ...    ...       ...          ...           ...              ...   \n",
+       "5009 2019-11-29  12.50  0.082251        14.68      0.174400                1   \n",
+       "5010 2019-12-02  12.69  0.015200        16.38      0.290780                1   \n",
+       "5011 2019-12-03  14.68  0.156816        14.46     -0.014986               -1   \n",
+       "5012 2019-12-04  16.38  0.115804          NaN           NaN                0   \n",
+       "5013 2019-12-05  14.46 -0.117216          NaN           NaN                0   \n",
        "\n",
-       "[5010 rows x 6 columns]"
+       "      2 Day Significant  \n",
+       "0                     1  \n",
+       "1                     0  \n",
+       "2                    -1  \n",
+       "3                    -1  \n",
+       "4                    -1  \n",
+       "...                 ...  \n",
+       "5009                  1  \n",
+       "5010                  1  \n",
+       "5011                  0  \n",
+       "5012                  0  \n",
+       "5013                  0  \n",
+       "\n",
+       "[5014 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,13 +292,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "data_VIX.to_csv('VIX_Proc.csv', index=False)"
+    "data_VIX.to_csv(stock_dir+'VIX_Future.csv', index=False)"
    ]
   },
   {
