some refactoring and added SPY data

--- a/Output Gen.ipynb
+++ b/Output Gen.ipynb
@@ -24,11 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "data_VIX = pd.read_csv(stock_dir+'VIX.csv', parse_dates=['Date'])\n"
+    "stocks = ['VIX','SPY']"
    ]
   },
   {
@@ -67,7 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for stock in stocks:\n",
+    "    df = pd.read_csv(stock_dir+stock+'.csv', parse_dates=['Date'])\n",
+    "    df['Lag 2 Price'] = df['Price'].shift(-2)\n",
+    "    df['Lag 2 Change'] = (df['Lag 2 Price'] - df['Price'])/df['Price']\n",
+    "    df['Lag 2 Direction'] = df['Lag 2 Change'].apply(posOrNeg)\n",
+    "    df['Lag 2 Significant'] = df['Lag 2 Change'].apply(bigPosOrNeg)\n",
+    "    df.to_csv(stock_dir+stock+'_Predict.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +108,7 @@
        "Name: 2 Day Significant, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
