--- a/StockDataSaver.py.ipynb
+++ b/StockDataSaver.py.ipynb
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "stock_dir = 'data/out/'\n",
-    "stocks = ['MSFT','AAPL','GOOG', 'VIX']"
+    "stocks = ['MSFT','AAPL','GOOG', 'VIX', 'SPY']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,9 @@
       "getting GOOG\n",
       "wrote GOOG\n",
       "getting VIX\n",
-      "wrote VIX\n"
+      "wrote VIX\n",
+      "getting SPY\n",
+      "wrote SPY\n"
      ]
     }
    ],
