even more refactoring

--- a/CorrelationCheck.ipynb
+++ b/CorrelationCheck.ipynb
@@ -2,514 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 138,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from functools import reduce"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 129,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "twitter_dir = 'data/in/twitter/'\n",
-    "news_dir = 'data/in/news/'\n",
-    "stock_dir = 'data/out/'"
+    "feature_dir = 'data/features/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
-    "influencers = ['BarackObama','cnnbrk', 'KimKardashian']\n",
-    "sources = ['New York Times', 'CNN', 'Washington Post']\n",
-    "outs = ['VIX_Predict', 'SPY_Predict']"
+    "df_twitter = pd.read_csv(feature_dir+'twitter_features.csv')\n",
+    "df_news = pd.read_csv(feature_dir+'news_features.csv')\n",
+    "df_out= pd.read_csv(feature_dir+'stock_features.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "twitter_important_columns = ['Date','sentiment_score']\n",
-    "out_important_columns = ['Date','Change','Lag 2 Change', 'Lag 2 Significant']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "first_date = pd.to_datetime('1/1/2015')\n",
-    "last_date = pd.to_datetime('1/1/2017')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfs_twitter = []\n",
-    "for influencer in influencers:\n",
-    "    df = pd.read_csv(twitter_dir+influencer+'.csv', parse_dates=['Date'])\n",
-    "    df['Date']= pd.to_datetime(df['Date'].dt.normalize())\n",
-    "    df = df[df['Date']<last_date]\n",
-    "    df = df[df['Date']>first_date]\n",
-    "    df = df[twitter_important_columns]\n",
-    "    df = df.groupby('Date').sum()\n",
-    "    df = df.rename(columns={'sentiment_score':influencer+'_sentiment_score'})\n",
-    "    dfs_twitter.append(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "dfs_news = []\n",
-    "for source in sources:\n",
-    "    df = pd.read_csv(news_dir+source+'.csv', parse_dates=['Date'])\n",
-    "    df['Date']= pd.to_datetime(df['Date'].dt.normalize())\n",
-    "    df = df[df['Date']<last_date]\n",
-    "    df = df[df['Date']>first_date]\n",
-    "    df = df.groupby('Date').sum()\n",
-    "    df = df.rename(columns={'sentiment_score':source+'_sentiment_score'})\n",
-    "    dfs_news.append(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfs_out = []\n",
-    "for out in outs:\n",
-    "    df = pd.read_csv(stock_dir+out+'.csv', parse_dates=['Date'])\n",
-    "    df['Date']= pd.to_datetime(df['Date'].dt.normalize())\n",
-    "    df = df[df['Date']<last_date]\n",
-    "    df = df[df['Date']>first_date]\n",
-    "    df = df[out_important_columns]\n",
-    "    dfs_out.append(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Change</th>\n",
-       "      <th>Lag 2 Change</th>\n",
-       "      <th>Lag 2 Significant</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>3773</td>\n",
-       "      <td>2015-01-02</td>\n",
-       "      <td>0.116279</td>\n",
-       "      <td>0.144707</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3774</td>\n",
-       "      <td>2015-01-05</td>\n",
-       "      <td>0.080518</td>\n",
-       "      <td>0.050026</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3775</td>\n",
-       "      <td>2015-01-06</td>\n",
-       "      <td>0.059406</td>\n",
-       "      <td>-0.118052</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3776</td>\n",
-       "      <td>2015-01-07</td>\n",
-       "      <td>-0.008854</td>\n",
-       "      <td>-0.184119</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3777</td>\n",
-       "      <td>2015-01-08</td>\n",
-       "      <td>-0.110174</td>\n",
-       "      <td>0.005020</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4272</td>\n",
-       "      <td>2016-12-23</td>\n",
-       "      <td>0.005300</td>\n",
-       "      <td>0.044815</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4273</td>\n",
-       "      <td>2016-12-27</td>\n",
-       "      <td>0.077329</td>\n",
-       "      <td>0.072594</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4274</td>\n",
-       "      <td>2016-12-28</td>\n",
-       "      <td>-0.030179</td>\n",
-       "      <td>0.110177</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4275</td>\n",
-       "      <td>2016-12-29</td>\n",
-       "      <td>0.105971</td>\n",
-       "      <td>0.069962</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4276</td>\n",
-       "      <td>2016-12-30</td>\n",
-       "      <td>0.003802</td>\n",
-       "      <td>-0.031818</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>504 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Date    Change  Lag 2 Change  Lag 2 Significant\n",
-       "3773 2015-01-02  0.116279      0.144707                  1\n",
-       "3774 2015-01-05  0.080518      0.050026                  1\n",
-       "3775 2015-01-06  0.059406     -0.118052                 -1\n",
-       "3776 2015-01-07 -0.008854     -0.184119                 -1\n",
-       "3777 2015-01-08 -0.110174      0.005020                  0\n",
-       "...         ...       ...           ...                ...\n",
-       "4272 2016-12-23  0.005300      0.044815                  1\n",
-       "4273 2016-12-27  0.077329      0.072594                  1\n",
-       "4274 2016-12-28 -0.030179      0.110177                  1\n",
-       "4275 2016-12-29  0.105971      0.069962                  1\n",
-       "4276 2016-12-30  0.003802     -0.031818                 -1\n",
-       "\n",
-       "[504 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfs_out[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_twitter = reduce(lambda  left,right: pd.merge(left,right,on=['Date'],\n",
-    "                                            how='outer'), dfs_twitter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_news = reduce(lambda  left,right: pd.merge(left,right,on=['Date'],\n",
-    "                                            how='outer'), dfs_news)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "outs_name = [' '+out.split('_')[0] for out in outs]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_out = reduce(lambda  left,right: pd.merge(left,right,on=['Date'],\n",
-    "                                            how='outer', suffixes=outs_name), dfs_out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Change VIX</th>\n",
-       "      <th>Lag 2 Change VIX</th>\n",
-       "      <th>Lag 2 Significant VIX</th>\n",
-       "      <th>Change SPY</th>\n",
-       "      <th>Lag 2 Change SPY</th>\n",
-       "      <th>Lag 2 Significant SPY</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>2015-01-02</td>\n",
-       "      <td>0.116279</td>\n",
-       "      <td>0.144707</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.007741</td>\n",
-       "      <td>-0.020787</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>2015-01-05</td>\n",
-       "      <td>0.080518</td>\n",
-       "      <td>0.050026</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.010708</td>\n",
-       "      <td>-0.013469</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>2015-01-06</td>\n",
-       "      <td>0.059406</td>\n",
-       "      <td>-0.118052</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-0.010188</td>\n",
-       "      <td>0.009501</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>2015-01-07</td>\n",
-       "      <td>-0.008854</td>\n",
-       "      <td>-0.184119</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-0.003315</td>\n",
-       "      <td>0.024724</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>2015-01-08</td>\n",
-       "      <td>-0.110174</td>\n",
-       "      <td>0.005020</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.012859</td>\n",
-       "      <td>0.001961</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>499</td>\n",
-       "      <td>2016-12-23</td>\n",
-       "      <td>0.005300</td>\n",
-       "      <td>0.044815</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.000754</td>\n",
-       "      <td>0.005057</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>500</td>\n",
-       "      <td>2016-12-27</td>\n",
-       "      <td>0.077329</td>\n",
-       "      <td>0.072594</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.002617</td>\n",
-       "      <td>-0.006814</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>501</td>\n",
-       "      <td>2016-12-28</td>\n",
-       "      <td>-0.030179</td>\n",
-       "      <td>0.110177</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.002433</td>\n",
-       "      <td>-0.008121</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>502</td>\n",
-       "      <td>2016-12-29</td>\n",
-       "      <td>0.105971</td>\n",
-       "      <td>0.069962</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.009225</td>\n",
-       "      <td>0.002495</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>503</td>\n",
-       "      <td>2016-12-30</td>\n",
-       "      <td>0.003802</td>\n",
-       "      <td>-0.031818</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0.001114</td>\n",
-       "      <td>0.003960</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>504 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Date  Change VIX  Lag 2 Change VIX  Lag 2 Significant VIX  \\\n",
-       "0   2015-01-02    0.116279          0.144707                      1   \n",
-       "1   2015-01-05    0.080518          0.050026                      1   \n",
-       "2   2015-01-06    0.059406         -0.118052                     -1   \n",
-       "3   2015-01-07   -0.008854         -0.184119                     -1   \n",
-       "4   2015-01-08   -0.110174          0.005020                      0   \n",
-       "..         ...         ...               ...                    ...   \n",
-       "499 2016-12-23    0.005300          0.044815                      1   \n",
-       "500 2016-12-27    0.077329          0.072594                      1   \n",
-       "501 2016-12-28   -0.030179          0.110177                      1   \n",
-       "502 2016-12-29    0.105971          0.069962                      1   \n",
-       "503 2016-12-30    0.003802         -0.031818                     -1   \n",
-       "\n",
-       "     Change SPY  Lag 2 Change SPY  Lag 2 Significant SPY  \n",
-       "0     -0.007741         -0.020787                     -1  \n",
-       "1     -0.010708         -0.013469                     -1  \n",
-       "2     -0.010188          0.009501                      0  \n",
-       "3     -0.003315          0.024724                      1  \n",
-       "4      0.012859          0.001961                      0  \n",
-       "..          ...               ...                    ...  \n",
-       "499   -0.000754          0.005057                      0  \n",
-       "500    0.002617         -0.006814                      0  \n",
-       "501    0.002433         -0.008121                      0  \n",
-       "502   -0.009225          0.002495                      0  \n",
-       "503    0.001114          0.003960                      0  \n",
-       "\n",
-       "[504 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predict_dates = df_out['Date']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#FOR NOW ONLY DELETE THE WEEKENDS\n",
-    "df_twitter = pd.merge(predict_dates, df_twitter, on=[\"Date\"], how='left')\n",
-    "df_news = pd.merge(predict_dates, df_news, on=[\"Date\"], how='left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 135,
    "metadata": {
     "collapsed": true
    },
@@ -521,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +263,7 @@
        "KimKardashian_sentiment_score                       1.000000  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +490,7 @@
        "Washington Post_sentiment_score                         1.000000  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
